@@ -499,6 +499,9 @@ Trunk (unreleased changes)
     HDFS-2021. Update numBytesAcked before sending the ack in PacketResponder.
     (John George via szetszwo)
 
+    HDFS-1907. Fix position read for reading still-being-written file in
+    DFSInputStream.  (John George via szetszwo)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
